# parrot

./: Cargo.toml  Dockerfile  README.md  docker-compose.yml
.github/workflows/: build.yml  lint.yml
src/: client.rs  connection.rs  errors.rs  utils.rs
src/commands/: leave.rs  manage_sources.rs  mod.rs  play.rs  queue.rs  remove.rs  repeat_queue.rs  seek.rs  shuffle.rs  skip.rs  stop.rs  summon.rs  voteskip.rs
src/guild/: mod.rs  settings.rs  stored_queue.rs
src/handlers/: idle.rs  serenity.rs  track_end.rs
src/sources/: mod.rs  youtube.rs
